求人を強化した

--- a/job/01/index.html
+++ b/job/01/index.html
@@ -153,7 +153,7 @@
 								会社名
 							</th>
 							<td>
-								お問い合わせ後に公開
+								電話もしくはLINEで確認してください
 							</td>
 						</tr>
 						<tr>
@@ -161,7 +161,7 @@
 								勤務地
 							</th>
 							<td>
-								都内9拠点から選べる都内9拠点から選べる都内9拠点から選べる
+								東京都 城南エリア（品川区/目黒区/大田区/世田谷区）
 							</td>
 						</tr>
 						<tr>
@@ -178,9 +178,30 @@
 							</th>
 							<td>
 								<ul>
-									<li>
-										・平日
-									</li>
+									<li>・平日</li>
+									<li>・土日可能</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<th>
+								特徴
+							</th>
+							<td>
+								<ul>
+									<li>・アプリはGO / 独自無線での迎車あり（乗車依頼数は驚異の業界トップクラス）</li>
+									<li>・ライフワークに合わせた柔軟なシフト調整</li>
+									<li>・業界屈指の働きやすさ</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<th>
+								寮や賃貸について
+							</th>
+							<td>
+								<ul>
+									<li>・寮なし</li>
 								</ul>
 							</td>
 						</tr>
