--- a/job/03/index.html
+++ b/job/03/index.html
@@ -138,7 +138,7 @@
 						タクシーメイトの厳選した求人
 					</p>
 					<h2>
-						迎車専用ドライバー求人！業界トップクラスの独自無線あり/GOアプリ導入
+						ピアスOK！タトゥーOK！若者に優しく自由な社風のタクシー会社
 					</h2>
 				</div>
 			</section>
@@ -153,7 +153,7 @@
 								会社名
 							</th>
 							<td>
-								お問い合わせ後に公開
+								電話もしくはLINEで確認してください
 							</td>
 						</tr>
 						<tr>
@@ -161,7 +161,7 @@
 								勤務地
 							</th>
 							<td>
-								都内9拠点から選べる都内9拠点から選べる都内9拠点から選べる
+								東京都江東区南砂
 							</td>
 						</tr>
 						<tr>
@@ -169,7 +169,7 @@
 								給与
 							</th>
 							<td>
-								45〜60万円
+								45〜50万円
 							</td>
 						</tr>
 						<tr>
@@ -181,6 +181,29 @@
 									<li>
 										・平日
 									</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<th>
+								特徴
+							</th>
+							<td>
+								<ul>
+									<li>・20代が非常に多く自由な社風で仲が良い</li>
+									<li>・シフト自由</li>
+									<li>・S.RIDE搭載</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<th>
+								寮や賃貸について
+							</th>
+							<td>
+								<ul>
+									<li>・シャワー付き4.5万円寮</li>
+									<li>・最短1週間で入寮可</li>
 								</ul>
 							</td>
 						</tr>
