--- a/job/04/index.html
+++ b/job/04/index.html
@@ -7,7 +7,7 @@
 		content="タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<title>タクシー求人｜選べる9拠点！準大手グループで非常に安心な福利厚生！</title>
+	<title>タクシー求人｜【GO対応】社長直下で教育！年収800万円超えドライバー多数在籍</title>
 
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -34,7 +34,7 @@
 
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
-		<link rel="canonical" href="https://taxi-mate.jp/job/02/">
+	<link rel="canonical" href="https://taxi-mate.jp/job/04/">
 </head>
 
 <body>
@@ -138,7 +138,7 @@
 						タクシーメイトの厳選した求人
 					</p>
 					<h2>
-						選べる9拠点！準大手グループで非常に安心な福利厚生！
+						【GO対応】社長直下で教育！年収800万円超えドライバー多数在籍
 					</h2>
 				</div>
 			</section>
@@ -161,7 +161,7 @@
 								勤務地
 							</th>
 							<td>
-								都内9拠点から選べる
+								東京都練馬区三原台
 							</td>
 						</tr>
 						<tr>
@@ -169,7 +169,7 @@
 								給与
 							</th>
 							<td>
-								45〜60万円
+								45〜55万円
 							</td>
 						</tr>
 						<tr>
@@ -180,30 +180,8 @@
 								<ul>
 									<li>
 										・平日
+										・土日祝日面接も可能
 									</li>
-								</ul>
-							</td>
-						</tr>
-						<tr>
-							<th>
-								特徴
-							</th>
-							<td>
-								<ul>
-									<li>・業界準大手で福利厚生や保険なども充実</li>
-									<li>・年収1,200万円のドライバー在籍</li>
-									<li>・都内の寮あり</li>
-								</ul>
-							</td>
-						</tr>
-						<tr>
-							<th>
-								寮や賃貸について
-							</th>
-							<td>
-								<ul>
-									<li>・都内5拠点で寮あり</li>
-									<li>・家賃は月6,000円〜1万円と破格！</li>
 								</ul>
 							</td>
 						</tr>
