--- a/job/index.html
+++ b/job/index.html
@@ -134,7 +134,7 @@
 					求人一覧
 				</h1>
 				<p class="text_sub">
-					こちらに求人のサンプルを載せています。タクシーメイトでは非掲載の求人もいくつも取り扱っておりますのでまずはお問い合わせください。
+					こちらに厳選した求人掲載しています。推薦書を作成し紹介していますのでLINEもしくはお電話にてお問い合わせください。
 				</p>
 				<figure>
 					<img src="../images/mv_ pattern.webp" alt="イラスト">
@@ -225,6 +225,35 @@
 								</li>
 								<li>
 									・S.RIDE搭載
+								</li>
+							</ul>
+						</a>
+					</article>
+					<article>
+						<a href="../job/04">
+							<figure>
+								<img src="../images/eyecatch.webp" alt="求人アイキャッチ画像">
+							</figure>
+							<div>
+								<p>
+									東京都練馬区三原台
+								</p>
+								<p>
+									45〜55万円
+								</p>
+							</div>
+							<h3>
+								【GO対応】社長直下で教育！年収800万円超えドライバー多数在籍
+							</h3>
+							<ul>
+								<li>
+									・GOアプリ搭載
+								</li>
+								<li>
+									・社長直下の教育体制で、稼げる人が多い
+								</li>
+								<li>
+									・出庫時間が6時から14時までと自由
 								</li>
 							</ul>
 						</a>
