--- a/lp-2/index.html
+++ b/lp-2/index.html
@@ -54,10 +54,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 		<div class="header-bottom">
 			<p>
-				<span class="sm-txt">未経験<img src="./assets/img/biginner.webp" height="20px" alt="未経験" style="margin:0px 2px;">でも</span>
-				<span class="green-txt">月給45万円が目指せる求人</span>
+				<span class="sm-txt"><img src="./assets/img/biginner.webp" height="20px" alt="未経験" style="margin:0px 2px;">タクシー未経験でも</span>
+				<span class="green-txt">月給45万円が目指せる会社</span>
 				<span class="sm-txt">のみを</span>
-				<span>ご紹介！</span>
+				<span>推薦！</span>
 			</p>
 		</div>
 	</header>
@@ -65,6 +65,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<main id="main" class="mainpage">
 		<div class="first" id="first">
 			<div>
+				<p>＼タクシー専門の転職支援サービス／</p>
 				<p>タクシー未経験でも</p>
 				<p>月給45万円が目指せるタクシー会社をご紹介！</p>
 				<img src="./assets/img/taxi-top.png" width="40%" alt="">
