求人を追加

--- a/job/05/index.html
+++ b/job/05/index.html
@@ -7,7 +7,7 @@
 		content="タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<title>タクシー求人｜【GO対応】社長直下で教育！年収800万円超えドライバー多数在籍</title>
+	<title>タクシー求人｜【GO対応】千葉から通えて都内で営業可能な日本交通グループのタクシー会社</title>
 
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -138,7 +138,7 @@
 						タクシーメイトの厳選した求人
 					</p>
 					<h2>
-						【GO対応】社長直下で教育！年収800万円超えドライバー多数在籍
+						【GO対応】千葉から通えて都内で営業可能な日本交通グループのタクシー会社
 					</h2>
 				</div>
 			</section>
@@ -161,7 +161,7 @@
 								勤務地
 							</th>
 							<td>
-								東京都練馬区三原台
+								東京都葛飾区
 							</td>
 						</tr>
 						<tr>
@@ -169,7 +169,7 @@
 								給与
 							</th>
 							<td>
-								45〜55万円
+								40〜50万円
 							</td>
 						</tr>
 						<tr>
@@ -179,7 +179,6 @@
 							<td>
 								<ul>
 									<li>・平日</li>
-									<li>・土日祝日面接も可能</li>
 								</ul>
 							</td>
 						</tr>
@@ -189,9 +188,9 @@
 							</th>
 							<td>
 								<ul>
-									<li>・GOアプリ搭載</li>
-									<li>・社長直下の教育体制で、稼げる人が多い</li>
-									<li>・出庫時間が6時から14時までと自由</li>
+									<li>・全車両JapanTaxi対応</li>
+									<li>・地元の女性ドライバーが勤務</li>
+									<li>・日本最王手の日本交通グループ</li>
 								</ul>
 							</td>
 						</tr>
@@ -201,8 +200,7 @@
 							</th>
 							<td>
 								<ul>
-									<li>・賃貸の場合は家賃1ヶ月負担あり</li>
-									<li>・仲介手数料は会社負担 / 引越し費用は求職者持ち</li>
+									<li>なし</li>
 								</ul>
 							</td>
 						</tr>
