--- a/job/index.html
+++ b/job/index.html
@@ -258,6 +258,35 @@
 							</ul>
 						</a>
 					</article>
+					<article>
+						<a href="../job/05">
+							<figure>
+								<img src="../images/eyecatch.webp" alt="求人アイキャッチ画像">
+							</figure>
+							<div>
+								<p>
+									東京都葛飾区
+								</p>
+								<p>
+									40〜50万円
+								</p>
+							</div>
+							<h3>
+								【GO対応】千葉から通えて都内で営業可能な日本交通グループのタクシー会社
+							</h3>
+							<ul>
+								<li>
+									・全車両JapanTaxi対応
+								</li>
+								<li>
+									・地元の女性ドライバーが勤務
+								</li>
+								<li>
+									・日本最王手の日本交通グループ
+								</li>
+							</ul>
+						</a>
+					</article>
 				</div>
 			</section>
 		</section>
