--- a/lp-2/index.html
+++ b/lp-2/index.html
@@ -71,8 +71,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				</p>
 				<img class="top-img" src="./assets/img/taxi-top.png" width="60%" alt="">
 				<p class="t-small">
-					タクシーメイトではこれまで多くのタクシー未経験者の転職支援を成功させてきました。
-					無料で受けられる転職支援で、タクシー転職を成功させませんか？</p>
+					タクシーメイトはタクシー専門の転職支援サービスです。
+					無料の転職支援でタクシー転職を成功させませんか？</p>
 				<button onclick="startCarrierSupport()">今すぐ無料の転職支援を受ける</button>
 				<p class="t-small">推薦書を作成し高い合格率を実現！</p>
 			</div>
