【構造的変更】7/29 lp-2 の初版完成

--- a/lp-2/index.html
+++ b/lp-2/index.html
@@ -73,8 +73,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<p class="t-small">
 					タクシーメイトはタクシー専門の転職支援サービスです。
 					無料の転職支援でタクシー転職を成功させませんか？</p>
-				<button onclick="startCarrierSupport()">今すぐ無料の転職支援を受ける</button>
+				<button onclick="startCarrierSupport()"><span>＼1分で登録完了／</span>転職支援サービスに登録(無料)</button>
 				<p class="t-small">推薦書を作成し高い合格率を実現！</p>
+				<div class="next-img-first">
+					<img src="./assets/img/arrow-left.webp" alt="">
+				</div>
 			</div>
 		</div>
 		<div class="second" id="second">
@@ -84,10 +87,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p>STEP<span>2</span></p>
 					<p>STEP<span>3</span></p>
 					<p>STEP<span>4</span></p>
-					<p>STEP<span>5</span></p>
-					<p>STEP<span>6</span></p>
-					<p>STEP<span>7</span></p>
-					<p>STEP<span>8</span></p>
 				</div>
 				<div class="step-car"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
@@ -99,14 +98,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<span class="span-round3">
 					</span>
 					<span class="span-round4">
-					</span>
-					<span class="span-round5">
-					</span>
-					<span class="span-round6">
-					</span>
-					<span class="span-round7">
-					</span>
-					<span class="span-round8">
 					</span>
 				</div>
 			</div>
@@ -144,177 +135,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</div>
 				</div>
 			</div>
-			<!-- <div class="common-description">
-				<div class="common-img">
-					<img src="./assets/img/man.png" alt="">
-				</div>
-				<div class="common-des">
-					<div class="description-triangle"></div>
-					<div class="description-text">
-						「二種免許の取得費⽤」を出している<br>タクシー会社をご紹介します。
-					</div>
-				</div>
-			</div> -->
-			<!-- <div class="next-second">
-				<span class="next-button" id="second-before" onclick="gotoFirst()">< 戻る</span>
-
-			</div> -->
 		</div>
-		<div class="third" id="third">
+		<div class="fifth" id="five">
 			<div class="second-head">
 				<div class="step-text">
 					<p>STEP<span>1</span></p>
 					<p class="step-check">STEP<span class="span-check">2</span></p>
 					<p>STEP<span>3</span></p>
 					<p>STEP<span>4</span></p>
-					<p>STEP<span>5</span></p>
-					<p>STEP<span>6</span></p>
-					<p>STEP<span>7</span></p>
-					<p>STEP<span>8</span></p>
-				</div>
-				<div class="step-car-third"><img src="./assets/img/step-taxi.webp" alt=""></div>
-				<div class="step-road">
-					<p class="road-bar"></p>
-					<span class="span-round1">
-					</span>
-					<span class="span-round2">
-					</span>
-					<span class="span-round3">
-					</span>
-					<span class="span-round4">
-					</span>
-					<span class="span-round5">
-					</span>
-					<span class="span-round6">
-					</span>
-					<span class="span-round7">
-					</span>
-					<span class="span-round8">
-					</span>
-				</div>
-			</div>
-
-			<div class="common-title">
-				<span></span>
-				<p>考えている転職時期を教えてください</p>
-			</div>
-
-			<div class="third-five-part">
-				<div class="third-one">
-					<div class="third-cycle bg-white" id="plane" data-index="1" data-value="直ぐにでも" onclick="thirdCheck(this)">
-						<div class="third-img">
-							<img src="./assets/img/plane.webp" alt="">
-						</div>
-						<span class="third-span" id="plane-content">直ぐにでも</span>
-					</div>
-					<div class="third-cycle bg-white" id="train" data-index="2" data-value="来月あたり" onclick="thirdCheck(this)">
-						<div class="third-img">
-							<img src="./assets/img/train.webp" alt="">
-						</div>
-						<span class="third-span" id="train-content">来月あたり</span>
-					</div>
-					<div class="next-img-third">
-						<img src="./assets/img/arrow-left.webp" alt="">
-					</div>
-				</div>
-				<div class="third-two">
-					<div class="third-cycle bg-white" id="bus" data-index="3" data-value="3ヶ月以内" onclick="thirdCheck(this)">
-						<div class="third-img">
-							<img src="./assets/img/bus.webp" alt="">
-						</div>
-						<span class="third-span" id="bus-content">3ヶ月以内</span>
-					</div>
-					<div class="third-cycle bg-white" id="bike" data-index="4" data-value="半年以内" onclick="thirdCheck(this)">
-						<div class="third-img">
-							<img src="./assets/img/bike.webp" alt="">
-						</div>
-						<span class="third-span" id="bike-content">半年以内</span>
-					</div>
-				</div>
-				<div class="third-three bg-white" id="rickshaw" data-index="5" data-value="時期未定" onclick="thirdCheck(this)">
-					<div class="third-img">
-						<img src="./assets/img/think.webp" alt="">
-					</div>
-					<span class="third-span" id="rickshaw-content">時期未定</span>
-				</div>
-			</div>
-			<div class="next-third">
-				<span class="next-button first-child" id="third-before" onclick="gotoSecond()">< 戻る</span>
-
-
-			</div>
-		</div>
-		<div class="fourth" id="four">
-			<div class="second-head">
-				<div class="step-text">
-					<p>STEP<span>1</span></p>
-					<p>STEP<span>2</span></p>
-					<p class="step-check">STEP<span class="span-check">3</span></p>
-					<p>STEP<span>4</span></p>
-					<p>STEP<span>5</span></p>
-					<p>STEP<span>6</span></p>
-					<p>STEP<span>7</span></p>
-					<p>STEP<span>8</span></p>
-				</div>
-				<div class="step-car-four"><img src="./assets/img/step-taxi.webp" alt=""></div>
-				<div class="step-road">
-					<p class="road-bar"></p>
-					<span class="span-round1">
-					</span>
-					<span class="span-round2">
-					</span>
-					<span class="span-round3">
-					</span>
-					<span class="span-round4">
-					</span>
-					<span class="span-round5">
-					</span>
-					<span class="span-round6">
-					</span>
-					<span class="span-round7">
-					</span>
-					<span class="span-round8">
-					</span>
-				</div>
-			</div>
-
-			<div class="common-title">
-				<span></span>
-				<p>今回の転職理由について教えてください(複数)</p>
-			</div>
-
-			<div class="four-options">
-				<div class="next-img-four">
-					<img src="./assets/img/arrow-left.webp" alt="">
-				</div>
-				<div class="option-one bg-white" id="f1" data-index="1" data-value="収入を上げたいから" onclick="fourClick(this)">収入を上げたいから</div>
-				<div class="option-one bg-white" id="f2" data-index="2" data-value="自分のペースで仕事をしたいから" onclick="fourClick(this)">自分のペースで仕事をしたいから</div>
-				<div class="option-one bg-white" id="f3" data-index="3" data-value="もっとやりがいを感じる仕事をしたいから" onclick="fourClick(this)">もっとやりがいを感じる仕事をしたいから</div>
-				<div class="option-one bg-white" id="f4" data-index="4" data-value="正社員になりたいから" onclick="fourClick(this)">正社員になりたいから</div>
-				<div class="option-one bg-white" id="f5" data-index="5" data-value="副業ができる会社で働きたいから" onclick="fourClick(this)">副業ができる会社で働きたいから</div>
-				<div class="option-one bg-white" id="f6" data-index="6" data-value="自宅から近い会社で働きたいから" onclick="fourClick(this)">自宅から近い会社で働きたいから</div>
-				<div class="option-one bg-white" id="f7" data-index="7" data-value="今の仕事を中長期的に続けるイメージができないから" onclick="fourClick(this)">今の仕事を中長期的に続けるイメージができないから</div>
-				<div class="option-one bg-white" id="f8" data-index="8" data-value="人間関係に疲れてしまったから" onclick="fourClick(this)">人間関係に疲れてしまったから</div>
-			</div>
-
-			<div class="next">
-				<span class="next-button first-child" id="third-before" onclick="gotoThird()">< 戻る</span>
-
-				<span class="next-button disabled" id="four-next" onclick="fourHidden()">次へ</span>
-
-			</div>
-		</div>
-		<div class="fifth" id="five">
-			<div class="second-head">
-				<div class="step-text">
-					<p>STEP<span>1</span></p>
-					<p>STEP<span>2</span></p>
-					<p>STEP<span>3</span></p>
-					<p class="step-check">STEP<span class="span-check">4</span></p>
-					<p>STEP<span>5</span></p>
-					<p>STEP<span>6</span></p>
-					<p>STEP<span>7</span></p>
-					<p>STEP<span>8</span></p>
 				</div>
 				<div class="step-car-five"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
@@ -326,14 +154,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<span class="span-round3">
 					</span>
 					<span class="span-round4">
-					</span>
-					<span class="span-round5">
-					</span>
-					<span class="span-round6">
-					</span>
-					<span class="span-round7">
-					</span>
-					<span class="span-round8">
 					</span>
 				</div>
 			</div>
@@ -371,111 +191,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 			</div>
 		</div>
-	
-
-		<div class="sixth" id="six">
-			<div class="second-head">
-				<div class="step-text">
-					<p>STEP<span>1</span></p>
-					<p>STEP<span>2</span></p>
-					<p>STEP<span>3</span></p>
-					<p>STEP<span>4</span></p>
-					<p class="step-check">STEP<span class="span-check">5</span></p>
-					<p>STEP<span>6</span></p>
-					<p>STEP<span>7</span></p>
-					<p>STEP<span>8</span></p>
-				</div>
-				<div class="step-car-six"><img src="./assets/img/step-taxi.webp" alt=""></div>
-				<div class="step-road">
-					<p class="road-bar"></p>
-					<span class="span-round1">
-					</span>
-					<span class="span-round2">
-					</span>
-					<span class="span-round3">
-					</span>
-					<span class="span-round4">
-					</span>
-					<span class="span-round5">
-					</span>
-					<span class="span-round6">
-					</span>
-					<span class="span-round7">
-					</span>
-					<span class="span-round8">
-					</span>
-				</div>
-			</div>
-			<div class="common-title">
-				<span></span>
-				<p>お住まいの地域を教えてください</p>
-				<span class="required-tag">必須</span>
-			</div>
-			<div class="sixth-one">
-				<div class="next-img-six">
-					<img src="./assets/img/arrow-left.webp" alt="">
-				</div>
-				<div class="option-one bg-white" id="sixArea1" data-index="1" data-value="東京都" onclick="sixAreaClick(this)">東京都</div>
-				<div class="option-one bg-white" id="sixArea2" data-index="2" data-value="神奈川県" onclick="sixAreaClick(this)">神奈川県</div>
-				<div class="option-one bg-white" id="sixArea3" data-index="3" data-value="埼⽟県" onclick="sixAreaClick(this)">埼⽟県</div>
-				<div class="option-one bg-white" id="sixArea4" data-index="4" data-value="千葉県" onclick="sixAreaClick(this)">千葉県</div>
-				<div class="option-one bg-white" id="sixArea5" data-index="5" data-value="その他の地域" onclick="sixAreaClick(this)">その他の地域</div>
-			</div>
-			<!-- <div class="common-description-six">
-				<div class="common-img">
-					<img src="./assets/img/man.png" alt="">
-				</div>
-				<div class="common-des">
-					<div class="description-triangle"></div>
-					<div class="description-text sixth-des">
-						タクシーメイトでは⽉収45万円以上が⽬指せる求⼈のみを厳選して紹介しているため、⾸都圏エリアの求⼈のみの紹介となりますので予めご了承ください。
-					</div>
-				</div>
-			</div> -->
-			<div class="common-title">
-				<span></span>
-				<p>通勤⼿段について教えてください(全て)</p>
-				<span class="required-tag">必須</span>
-			</div>
-			<div class="sixth-one border-b">
-				<div class="option-one bg-white" id="sixWay1" data-index="1" data-value="電車" onclick="sixWayClick(this)">電車</div>
-				<div class="option-one bg-white" id="sixWay2" data-index="2" data-value="バス" onclick="sixWayClick(this)">バス</div>
-				<div class="option-one bg-white" id="sixWay3" data-index="3" data-value="自家用車" onclick="sixWayClick(this)">自家用車</div>
-				<div class="option-one bg-white" id="sixWay4" data-index="4" data-value="バイク" onclick="sixWayClick(this)">バイク</div>
-				<div class="option-one bg-white" id="sixWay5" data-index="5" data-value="自転車" onclick="sixWayClick(this)">自転車</div>
-				<div class="option-one bg-white" id="sixWay6" data-index="6" data-value="徒歩圏内が良い" onclick="sixWayClick(this)">徒歩圏内が良い</div>
-			</div>
-			<div class="common-title">
-				<span></span>
-				<p>最寄駅を教えてください</p>
-				<span class="any-tag">任意</span>
-			</div>
-			<div class="nearest-station">
-				<input type="text" class="custom-input" id="nearest_station" placeholder="例：上野駅">
-			</div>
-			
-			
-			<div class="next-six">
-				<span class="next-button first-child" id="six-before" onclick="gotoFive()">< 戻る</span>
-
-				<span class="next-button disabled" id="six-next" onclick="sixHidden()">次へ</span>
-
-			</div>
-		</div>
-	
 		<div class="newstep" id="newstep">
 			<div class="second-head">
 				<div class="step-text">
 					<p>STEP<span>1</span></p>
 					<p>STEP<span>2</span></p>
-					<p>STEP<span>3</span></p>
+					<p class="step-check">STEP<span class="span-check">3</span></p>
 					<p>STEP<span>4</span></p>
-					<p>STEP<span>5</span></p>
-					<p class="step-check">STEP<span class="span-check">6</span></p>
-					<p>STEP<span>7</span></p>
-					<p>STEP<span>8</span></p>
 				</div>
-				<div class="step-car-newstep"><img src="./assets/img/step-taxi.webp" alt=""></div>
+				<div class="step-car-four"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
 					<p class="road-bar"></p>
 					<span class="span-round1">
@@ -485,14 +209,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<span class="span-round3">
 					</span>
 					<span class="span-round4">
-					</span>
-					<span class="span-round5">
-					</span>
-					<span class="span-round6">
-					</span>
-					<span class="span-round7">
-					</span>
-					<span class="span-round8">
 					</span>
 				</div>
 			</div>
@@ -529,83 +245,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<span class="next-button disabled" id="newstep-next" onclick="newStepHidden()">次へ</span>
 			</div>
 		</div>
-		<div class="seven" id="seven">
-			<div class="second-head">
-				<div class="step-text">
-					<p>STEP<span>1</span></p>
-					<p>STEP<span>2</span></p>
-					<p>STEP<span>3</span></p>
-					<p>STEP<span>4</span></p>
-					<p>STEP<span>5</span></p>
-					<p>STEP<span>6</span></p>
-					<p class="step-check">STEP<span class="span-check">7</span></p>
-					<p>STEP<span>8</span></p>
-				</div>
-				<div class="step-car-seven"><img src="./assets/img/step-taxi.webp" alt=""></div>
-				<div class="step-road">
-					<p class="road-bar"></p>
-					<span class="span-round1">
-					</span>
-					<span class="span-round2">
-					</span>
-					<span class="span-round3">
-					</span>
-					<span class="span-round4">
-					</span>
-					<span class="span-round5">
-					</span>
-					<span class="span-round6">
-					</span>
-					<span class="span-round7">
-					</span>
-					<span class="span-round8">
-					</span>
-				</div>
-			</div>
-			<div class="common-title">
-				<span></span>
-				<p>運転中の事故について教えてください</p>
-			</div>
-			<div class="four-options-seven" id="four_options_seven">
-				<div class="next-img-seven">
-					<img src="./assets/img/arrow-left.webp" alt="">
-				</div>
-				<div class="option-one-seven bg-white" id="accident1" data-index="1" data-value="これまで事故をしたことはない" onclick="sevenAccident(this)">これまで事故をしたことはない</div>
-				<div class="option-one-seven bg-white" id="accident2" data-index="2" data-value="駐⾞場でぶつけた/縁⽯で擦った程度の軽い事故" onclick="sevenAccident(this)">駐⾞場でぶつけた/縁⽯で擦った程度の軽い事故</div>
-				<div class="option-one-seven bg-white" id="accident3" data-index="3" data-value="居眠り運転をしたことがある" onclick="sevenAccident(this)">居眠り運転をしたことがある</div>
-				<div class="option-one-seven bg-white" id="accident4" data-index="4" data-value="⼈⾝事故を起こしたことがある" onclick="sevenAccident(this)">⼈⾝事故を起こしたことがある</div>
-			</div>
-			<div class="nearest-description">
-				<div class="common-img">
-					<img src="./assets/img/stuff.webp" alt="">
-				</div>
-				<div class="common-des">
-					<div class="description-triangle"></div>
-					<div class="description-text sixth-des">
-						重⼤な過失事故以外は⾯接には影響しませんので正直にお答えください。
-					</div>
-				</div>
-			</div>
-			<div class="next">
-				<span class="next-button first-child" id="seven-before" onclick="gotoNewStep()">< 戻る</span>
-
-				<span class="next-button disabled" id="seven-next" onclick="sevenHidden()">次へ</span>
-
-			</div>
-		</div>
 		<div class="last" id="last">
 			<div class="second-head">
 				<div class="step-text">
 					<p>STEP<span>1</span></p>
 					<p>STEP<span>2</span></p>
 					<p>STEP<span>3</span></p>
-					<p>STEP<span>4</span></p>
-					<p>STEP<span>5</span></p>
-					<p>STEP<span>6</span></p>
-					<p>STEP<span>7</span></p>
-					<p class="step-check">STEP<span class="span-check">8</span></p>
+					<p class="step-check">STEP<span class="span-check">4</span></p>
 				</div>
-				<div class="step-car-last"><img src="./assets/img/step-taxi.webp" alt=""></div>
+				<div class="step-car-five"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
 					<p class="road-bar"></p>
 					<span class="span-round1">
@@ -615,14 +263,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<span class="span-round3">
 					</span>
 					<span class="span-round4">
-					</span>
-					<span class="span-round5">
-					</span>
-					<span class="span-round6">
-					</span>
-					<span class="span-round7">
-					</span>
-					<span class="span-round8">
 					</span>
 				</div>
 			</div>
@@ -690,28 +330,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				</div>
 
 			</div>
-			<div class="common-title">
+			<!-- <div class="common-title">
 				<span></span>
 				<p>メールアドレス</p>
 				<span class="any-tag">任意</span>
-			</div>
-			<div class="last-name mb-40">
+			</div> -->
+			<!-- <div class="last-name mb-40">
 				<div class="last-input">
 					<input type="text" name="email" class="custom-phone-input" id="email" placeholder="例：advisor@anytrai.jp">
 				</div>
 				<div class="emailInputError" id="emailInputError">
 				正しいメールアドレスを入力してください。
-				</div>
-			</div>
-			<!-- <div class="last-des">
-				<div class="common-img">
-					<img src="./assets/img/man.png" alt="">
-				</div>
-				<div class="common-des">
-					<div class="description-triangle"></div>
-					<div class="description-text sixth-des">
-						メールアドレスの記載がある⽅には厳選した求⼈もお送りします。
-					</div>
 				</div>
 			</div> -->
 			<div class="next">
