--- a/lp-2/next/index.html
+++ b/lp-2/next/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="../assets/css/style.min.css">
+    <link rel="stylesheet" href="../../lp-1/assets/css/style.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>お問い合わせありがとうございます｜タクシーメイト</title>
 
@@ -16,7 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-KX8ZQFSX');</script>
     <!-- End Google Tag Manager -->
 
-    <link rel="canonical" href="https://taxi-mate.jp/lp-1/thanks/">
+    <link rel="canonical" href="https://taxi-mate.jp/lp-2/next/">
 
     <style>
         .thanks {
@@ -160,20 +160,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="thanks">
         <p>
-            ご登録ありがとうございました。<br>こちらから求人一覧が確認できます↓
-        </p>
-        <div class="link">
-            <a href="../../job" class="button b_job">
-                ＼月給45万円が目指せる求人を厳選／
-                <span>
-                    おすすめ求人を見る
-                </span>
-            </a>
-        </div>
-        <br>
-
-        <p>
-            また、タクシーメイトでは転職を成功させるためにお電話での相談を行っております。<br>
+            タクシーメイトでは転職を成功させるためにお電話での相談を行っております。<br>
             <span class="tel green-marker">
                 <span class="material-icons original-icon">
                     phone_in_talk
@@ -211,6 +198,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     LINEの友達登録する
                 </span>
             </a> -->
+            <a href="../../job" class="button b_job">
+                ＼月給45万円が目指せる求人を厳選／
+                <span>
+                    おすすめ求人を見る
+                </span>
+            </a>
         </div>
     </div>
 
