LCPの問題を改善

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -150,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				</div>
 				<div class="common-des">
 					<div class="description-triangle"></div>
-					<div class="description-text padding-5-7 auto-height">
+					<div class="description-text padding-5-7">
 						タクシーメイトは無料の転職支援サービスです。転職に成功した多くの方がご登録しています。
 					</div>
 				</div>
