--- a/lp-1/thanks/index.html
+++ b/lp-1/thanks/index.html
@@ -163,7 +163,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             ご登録ありがとうございました。<br>こちらから求人一覧が確認できます↓
         </p>
         <div class="link">
-            <a href="../../job" class="button b_job">
+            <a href="https://taxi-mate.notion.site/47bf3e9b274344f696befd5af5a7d340?v=97955df816b54ab38f982219917f7428" class="button b_job">
                 ＼月給45万円が目指せる求人を厳選／
                 <span>
                     おすすめ求人を見る
